--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -3,7 +3,7 @@
 <ul class="todos">
   <% @todo.each do |todo| %>
 
-    <li>
+    <li class="<%= "completed" if todo.completed? %>">
       <%= todo.title %>
       <%= button_to "Mark complete", todo_completion_path(todo) %>
     </li>
